@@ -1,6 +1,7 @@
 vNEXT (in development)
 
  * Added MotdFinished event
+ * Added UserAccountChanged event
  * Improved some documentation
 
 v0.4.0
